--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
   margin: auto;
   margin-top: 100px;
   padding: 20px;
-  background: #e5e1e1;
+  background: #d7d7d7;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
